# tauri-plugin-sqlite-store

./: Cargo.toml  LICENSE  README-fr.md  README.md  package.json
api-docs/: README.md  modules.md
api-docs/classes/: SqliteStore.md
api-docs/interfaces/: OpenOptions.md
example/: package.json
example/src/: App.svelte
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: main.rs
src/: error.rs  lib.rs  models.rs  sqlite.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  rollup.config.js  tsconfig.json
